--- a/project_1/app/app/src/main/res/values/strings.xml
+++ b/project_1/app/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    // register activity
     <string name="app_name">Call HTTP Co</string>
     <string name="tv_start_value">--></string>
     <string name="action_getusers">Get Users (GET)</string>
@@ -30,4 +31,10 @@
     <string name="title_server">Server</string>
     <string name="title_user">User</string>
     <string name="title_card">Card</string>
+
+    // buttons
+    <string name="bt_cart">Cart</string>
+    <string name="bt_profile">Profile</string>
+    <string name="bt_qrcode">QR-Code</string>
+    <string name="bt_terminal">Terminal</string>
 </resources>
