--- a/project_1/client/app/src/main/res/values/strings.xml
+++ b/project_1/client/app/src/main/res/values/strings.xml
@@ -27,4 +27,8 @@
     <string name="bottom_button_end">End</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="product_name">Product Name</string>
+    <string name="product_value">Value</string>
+    <string name="lv_empty_message">Empty list</string>
 </resources>
