--- a/project_1/client/app/src/main/res/values/strings.xml
+++ b/project_1/client/app/src/main/res/values/strings.xml
@@ -11,7 +11,11 @@
     <string name="register_hint_pass">Password</string>
     <string name="register_button">Register</string>
     <string name="register_error">Error</string>
-
+    <string name="register_cart_number">Cart Number</string>
+    <string name="register_cart_date">Expiration Date</string>
+    <string name="register_cart_type_1">Visa</string>
+    <string name="register_cart_type_2">Mastercard</string>
+    <string name="register_cart_type_3">American Express	</string>
     // login fragment
     <string name="login_hint_name">Name</string>
     <string name="login_hint_nick">Nickname</string>
