fixed register input where '/' does not show up

--- a/project_1/client/app/src/main/res/values/strings.xml
+++ b/project_1/client/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="register_error">Error</string>
     <string name="register_cart_number">Cart Number</string>
     <string name="register_cart_date">Expiration Date</string>
+    <string name="register_cart_date_mask">__/__/____</string>
     <string name="register_cart_type_1">Visa</string>
     <string name="register_cart_type_2">Mastercard</string>
     <string name="register_cart_type_3">American Express	</string>
