--- a/project_1/Terminal/app/src/main/res/values/strings.xml
+++ b/project_1/Terminal/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
   <string name="tv_title">NFC Receiver</string>
   <string name="tv_waiting">Waiting for a tap</string>
   <string name="bt_clear">Clear</string>
+  <string name="tv_neutral">No Payment Done</string>
+  <string name="tv_error">Error in Payment</string>
+  <string name="tv_success">Success in Payment</string>
 </resources>
