added fields so user can filter groceries

--- a/project_1/generator/app/src/main/res/values/strings.xml
+++ b/project_1/generator/app/src/main/res/values/strings.xml
@@ -8,5 +8,20 @@
     <string name="grocery_image">Grocery Image</string>
     <string name="grocery_price">€%1$s/kg</string>
     <string name="grocery_description_arrow_down">Arrow Down</string>
+    <string name="search">Search for groceries…</string>
+
+    <string-array name="category_array">
+        <item>All</item>
+        <item>Fruit</item>
+        <item>Vegetables</item>
+        <item>Packages</item>
+    </string-array>
+
+    <string-array name="sort_array">
+        <item>Name (A-Z)</item>
+        <item>Name (Z-A)</item>
+        <item>Price (Low to High)</item>
+        <item>Price (High to Low)</item>
+    </string-array>
 
 </resources>
