added dubai chocolate

--- a/project_1/generator/app/src/main/res/values/strings.xml
+++ b/project_1/generator/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
         <item>Fruit</item>
         <item>Vegetables</item>
         <item>Packages</item>
+        <item>Dessert</item>
     </string-array>
 
     <string-array name="sort_array">
