--- a/project_1/client/app/src/main/res/values/strings.xml
+++ b/project_1/client/app/src/main/res/values/strings.xml
@@ -43,9 +43,9 @@
     <string name="product_value">Value</string>
     <string name="product_price">Price</string>
     <string name="total_value_label">Total value:</string>
-    <string name="total_value_default">0,00 €</string>
+    <string name="total_value_default">€0,00</string>
     <string name="lv_empty_message">Empty list</string>
-    <string name="price_format">%.2f €</string>
+    <string name="price_format">€%.2f</string>
 
     <string name="tv_nfc_send">Tap to send</string>
     <string name="tv_nfc_msg">Tap to send</string>
