--- a/project_1/client/app/src/main/res/values/strings.xml
+++ b/project_1/client/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="register_cart_type_1">Visa</string>
     <string name="register_cart_type_2">Mastercard</string>
     <string name="register_cart_type_3">Discover</string>
+
     // login fragment
     <string name="login_hint_name">Name</string>
     <string name="login_hint_nick">Nickname</string>
@@ -28,9 +29,10 @@
     <string name="login_error">Error</string>
 
     // menu
+    <string name="menu_cart">Cart</string>
     <string name="menu_profile">Profile</string>
     <string name="menu_transactions">Past Transactions</string>
-    <string name="menu_vouchers">Vouchers</string>
+    <string name="menu_vouchers">Discount &amp; Vouchers</string>
 
     // bottom bar shopping
     <string name="bottom_button_qr">Scan QR</string>
@@ -41,14 +43,14 @@
     <string name="product_name">Product Name</string>
     <string name="product_value">Value</string>
     <string name="product_price">Price</string>
-    <string name="total_value_label">Total value:</string>
+    <string name="total_value_label">Total Value:</string>
     <string name="total_value_default">€0,00</string>
     <string name="lv_empty_message">Empty list</string>
     <string name="price_format">€%.2f</string>
 
     <string name="spinner_order">Order by </string>
     <string name="spinner_filter">Filter by </string>
-    <string name="search">Search for a specific product...</string>
+    <string name="search">Search for a specific product…</string>
     <string name="tv_nfc_send">Tap to send</string>
     <string name="tv_nfc_msg">Tap to send</string>
 
@@ -68,4 +70,9 @@
     <string name="checkout_option_type_pay">Select the payment type:</string>
     <string name="checkout_confirm">Checkout</string>
 
+    // vouchers fragment
+    <string name="text_discount">Total Discount:</string>
+    <string name="text_vouchers">Total Vouchers:</string>
+    <string name="total_discount_default">€0,00</string>
+    <string name="total_vouchers_default">0</string>
 </resources>
