--- a/project_1/client/app/src/main/res/values/strings.xml
+++ b/project_1/client/app/src/main/res/values/strings.xml
@@ -6,12 +6,18 @@
     <string name="changeTextDefault">Editing</string>
     <string name="changeTextParameter">Default</string>
 
+    <string name="changePassParameter">Password</string>
+    <string name="changePassOld">Write your old password:</string>
+    <string name="changePassNew">Write your new password:</string>
+    <string name="changePassNewConfirm">Write your new password again:</string>
+
     <string name="changeConfirm">Confirm</string>
 
     // content descriptor
     <string name="image_qrcode_checkout">QR-Code Checkout Message</string>
     <string name="image_error_image">Error Icon</string>
     <string name="image_eliminate_product">Product Elimination Icon</string>
+    <string name="image_profile_editor">Editor</string>
 
     // hint
     <string name="hint_product_value">Product Value</string>
