added filter and order text to generator; put fields vertically

--- a/project_1/generator/app/src/main/res/values/strings.xml
+++ b/project_1/generator/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <string name="grocery_price">€%1$s/kg</string>
     <string name="grocery_description_arrow_down">Arrow Down</string>
     <string name="search">Search for groceries…</string>
+    <string name="spinner_filter">Filter By</string>
+    <string name="spinner_order">Order By</string>
 
     <string-array name="category_array">
         <item>All</item>
