--- a/project_1/Terminal/app/src/main/res/values/strings.xml
+++ b/project_1/Terminal/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-  <string name="app_name">NFC Terminal</string>
+  <string name="app_name">Terminal</string>
   <string name="mn_qr">Scan QR code</string>
   <string name="tv_title">NFC Receiver</string>
   <string name="tv_waiting">Waiting for a tap</string>
@@ -7,4 +7,5 @@
   <string name="tv_neutral">No Payment Done</string>
   <string name="tv_error">Error in Payment</string>
   <string name="tv_success">Success in Payment</string>
+  <string name="menu_mode">Mode</string>
 </resources>
